--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 gpui = { git = "https://github.com/zed-industries/zed", rev = "ddb551c794345538dbef112c5bcc2ae99f27b07f" }
+lazy_static = "1.4.0"
+notify = "6.1.1"
+serde = "1.0.203"
+serde-xml-rs = "0.6.0"
