--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ lazy_static = "1.4.0"
 notify = "6.1.1"
 serde = "1.0.203"
 serde-xml-rs = "0.6.0"
+uuid = { version = "1.8.0", features = ["v4"] }
