--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,8 +17,15 @@ repos:
   - repo: https://github.com/doublify/pre-commit-rust
     rev: v1.0
     hooks:
-      - id: fmt
       - id: clippy
+  - repo: local
+    hooks:
+      - id: fmt
+        name: fmt
+        entry: cargo +nightly fmt
+        language: system
+        types: [rust]
+        args: ["--"]
   - repo: https://github.com/crate-ci/typos
     rev: v1.16.5
     hooks:
