--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 async-channel = "2.3.1"
 gpui = { git = "https://github.com/zed-industries/zed", rev = "ddb551c794345538dbef112c5bcc2ae99f27b07f" }
+indexmap = "2.2.6"
 lazy_static = "1.4.0"
 notify = "6.1.1"
 serde = "1.0.203"
