--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ gpui = { git = "https://github.com/zed-industries/zed", rev = "ddb551c794345538d
 indexmap = "2.2.6"
 lazy_static = "1.4.0"
 notify = "6.1.1"
+rfd = "0.14.1"
 serde = "1.0.203"
-serde-xml-rs = "0.6.0"
+serde_json = "1.0.117"
 uuid = { version = "1.8.0", features = ["v4"] }
