--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 anyhow = "1.0.86"
 async-channel = "2.3.1"
+convert_case = "0.6.0"
 gpui = { git = "https://github.com/zed-industries/zed", rev = "ddb551c794345538dbef112c5bcc2ae99f27b07f" }
 indexmap = "2.2.6"
+indoc = "2.0.5"
 lazy_static = "1.4.0"
 notify = "6.1.1"
 rfd = "0.14.1"
